2006-04-25  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/qif-to-gnc.scm:
	* src/import-export/qif-import/qif-merge-groups.scm:
	* src/import-export/qif-import/qif-file.scm:
	* src/import-export/qif-import/druid-qif-import.c:
	* src/gnome/glade/progress.glade: Center the progress dialog on
	the qif import druid.  Fixes #336188.

	* src/engine/gnc-pricedb.c:
	* src/engine/gnc-commodity.c: Mark the collections as clean after
	the default items have been created.  Fixes #337185.

	* src/scm/price-quotes.scm: Fix the crash in #339764.

2006-04-25  Joshua Sled  <jsled@asynchronous.org>
	Bug#119078: promote register parse errors to the user.

	* src/register/register-core/pricecell.c (gnc_price_cell_parse):
	Return error if cell text isn't parseable via expression parser.

	* src/register/register-core/pricecell.c (gnc_price_cell_leave):
	* src/register/register-core/formulacell.c (gnc_formula_cell_leave): 
	Promote error to UI if cell text isn't parseable.

	* src/register/register-core/table-allgui.c (gnc_table_save_cells): 
	* src/register/ledger-core/split-register-load.c
	(gnc_split_register_load): Don't -- seemingly unnecessarily --
	call [...]leave_update here.

2006-04-25  David Hampton  <hampton@employees.org>

	* src/gnome/gnc-plugin-page-register.c: Don't try to update the
	main window page name when invoked with an embedded window.  Fixes
	#339763.

2006-04-25  Christian Stimming  <stimming@tuhh.de>

	* po/de.po: Updated German translation. 3666 out of 3666
	translated.

2006-04-25  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-tree-view.c: Initialize depth variable in
	  tree view keynav before using it.

2006-04-25  David Hampton  <hampton@employees.org>

	* src/scm/process.scm: Handle the failure to fork a child process
	and print an error message, instead of just ignoring the
	error. Fixes #127241.

	* src/gnome-utils/gnc-currency-edit.[ch]: Add completion support to
	the currency edit widget.  Fixes #339412.
