@@ -31,23 +31,23 @@ usage information
 Show this help message
 .IP --debug
 Enable debugging mode
-.IP --loglevel LOGLEVEL
+.IP "--loglevel LOGLEVEL"
 Set the logging level from 0 (least) to 6 (most)
 .IP --nofile
 Do not load the last file opened
-.IP --config-dir CONFIGDIR
+.IP "--config-dir CONFIGDIR"
 Set configuration directory
-.IP --share-dir SHAREDIR
+.IP "--share-dir SHAREDIR"
 Set shared directory
-.IP --load-path LOADPATH
+.IP "--load-path LOADPATH"
 Set the search path for .scm files
-.IP --doc-path DOCPATH
+.IP "--doc-path DOCPATH"
 Set the search path for documentation files
 .IP --evaluate
 Evaluate the guile command
-.IP --load FILE
+.IP "--load FILE"
 Load the given .scm file
-.IP --add-price-quotes FILE
+.IP "--add-price-quotes FILE"
 Add price quotes to the given data file
 .IP --load-user-config
 Load the user configuration
